# robot-fleet

./: .gitignore  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
artifact-store/: Cargo.toml
artifact-store/src/: error.rs  lib.rs  main.rs
artifact-store/src/registry/: mod.rs
artifact-store/src/server/: mod.rs
artifact-store/src/storage/: mod.rs
artifact-store/tests/: minio_integration.rs
demo/: run-demo.sh
demo/docker/: Dockerfile.device-management-service  Dockerfile.robot-agent  docker-compose.yml
demo/isaac_sim/: scene_h1.py  tcp_frame_listener.py  tcp_test_sender.py
demo/pki/: bootstrap.sh
device-management-service/: Cargo.toml
device-management-service/src/: error.rs  lib.rs  main.rs  telemetry.rs
device-management-service/src/enrollment/: mod.rs
device-management-service/src/heartbeat/: mod.rs
device-management-service/src/provisioning/: mod.rs
device-management-service/src/server/: mod.rs
device-management-service/src/store/: mod.rs
device-management-service/tests/: grpc_integration.rs
ota-service/: Cargo.toml
ota-service/src/: error.rs  main.rs
ota-service/src/dispatcher/: mod.rs
ota-service/src/server/: mod.rs
ota-service/src/store/: mod.rs
pki/: Cargo.toml
pki/src/: csr.rs  error.rs  lib.rs  mtls.rs
pki/tests/: mtls_handshake.rs
proto/: Cargo.toml  artifacts.proto  build.rs  fleet.proto
proto/src/: lib.rs
proto/tests/: smoke.rs
robot-agent/: Cargo.toml
robot-agent/src/: enrollment.rs  error.rs  heartbeat.rs  main.rs  ota.rs  provisioning.rs  telemetry.rs
robot-agent/tests/: telemetry_integration.rs
simulator/: Dockerfile  pytest.ini
simulator/controller/: __init__.py  backends.py  robot_controller.py  scene.py  socket_bridge.py
simulator/testdata/: mock_controller_test.py
