[workspace]
resolver = "2"

members = [
    "proto",
    "pki",
    "device-management-service",
    "ota-service",
    "artifact-store",
    "robot-agent",
]

# Workspace-wide dependency versions — each crate inherits with { workspace = true }
[workspace.dependencies]
# Async runtime
tokio        = { version = "1.38", features = ["full"] }
tokio-stream = { version = "0.1" }

# gRPC + protobuf
tonic        = { version = "0.12", features = ["tls", "tls-roots"] }
tonic-build  = { version = "0.12" }
prost        = { version = "0.13" }
prost-types  = { version = "0.13" }

# TLS
rustls          = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls    = { version = "0.26" }
rustls-pemfile  = { version = "2.1" }
rcgen           = { version = "0.13", features = ["pem", "x509-parser"] }
x509-parser     = { version = "0.16", features = ["verify"] }
time            = { version = "0.3", features = ["std"] }

# Persistence
rusqlite = { version = "0.31", features = ["bundled"] }

# Object storage
aws-sdk-s3    = { version = "1.38" }
aws-config    = { version = "1.5" }

# HTTP client (artifact download in robot-agent)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
bytes   = { version = "1.7" }

# Crypto / hashing
sha2    = { version = "0.10" }
hex     = { version = "0.4" }
uuid    = { version = "1.10", features = ["v4"] }
rand    = { version = "0.8" }

# Error handling
thiserror    = { version = "1.0" }
anyhow       = { version = "1.0" }
async-trait  = { version = "0.1" }

# Observability
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
config   = { version = "0.14" }
serde    = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# Testing
tokio-test        = { version = "0.4" }
tempfile          = { version = "3.10" }
mockall           = { version = "0.13" }
