[package]
name    = "artifact-store"
version = "0.1.0"
edition = "2021"

[lib]
name = "artifact_store"
path = "src/lib.rs"

[[bin]]
name = "artifact-store"
path = "src/main.rs"

[dependencies]
robot-fleet-proto = { path = "../proto" }
robot-fleet-pki   = { path = "../pki" }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
tonic        = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }
aws-sdk-s3   = { workspace = true }
aws-config   = { workspace = true }
rusqlite     = { workspace = true }
uuid         = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
async-trait  = { workspace = true }
time         = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
config       = { workspace = true }
serde        = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile   = { workspace = true }
mockall    = { workspace = true }
