[package]
name    = "device-management-service"
version = "0.1.0"
edition = "2021"

[lib]
name = "device_management_service"
path = "src/lib.rs"

[[bin]]
name = "device-management-service"
path = "src/main.rs"

[dependencies]
robot-fleet-proto = { path = "../proto" }
robot-fleet-pki   = { path = "../pki" }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
tonic        = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }
rustls          = { workspace = true }
rustls-pemfile  = { workspace = true }
rcgen           = { workspace = true }
rusqlite        = { workspace = true }
uuid            = { workspace = true }
time            = { workspace = true }
async-trait     = { workspace = true }
futures         = { version = "0.3" }
thiserror       = { workspace = true }
anyhow          = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
config       = { workspace = true }
serde        = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile   = { workspace = true }
mockall    = { workspace = true }
