[package]
name    = "robot-fleet-pki"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls         = { workspace = true }
tokio-rustls   = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen          = { workspace = true }
x509-parser    = { workspace = true }
time           = { workspace = true }
tonic          = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }

[dev-dependencies]
tokio      = { workspace = true }
tokio-test = { workspace = true }
tempfile   = { workspace = true }
