[package]
name    = "robot-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "robot-agent"
path = "src/main.rs"

[dependencies]
robot-fleet-proto = { path = "../proto" }
robot-fleet-pki   = { path = "../pki" }

tokio        = { workspace = true }
tokio-stream = { workspace = true }
tonic        = { workspace = true }
prost        = { workspace = true }
prost-types  = { workspace = true }
rustls       = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rcgen        = { workspace = true }
reqwest      = { workspace = true }
bytes        = { workspace = true }
tempfile     = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
uuid         = { workspace = true }
thiserror    = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
config       = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile   = { workspace = true }
mockall    = { workspace = true }
tokio      = { workspace = true, features = ["full"] }
